k8s/k2tf/04_ingress/default-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-nginx-deployment
  labels:
    app: default-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-nginx
  template:
    metadata:
      labels:
        app: default-nginx
    spec:
      containers:
        - name: default-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
