k8s/k2tf/04_ingress/default-nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-nginx-nodeport-service
  labels:
    app: default-nginx
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: default-nginx
  ports:
    - port: 80
      targetPort: 80
